# swagger.json
@@ -1116,6 +1116,62 @@
         ]
       }
     },
+    "/estimate-requests-message/company/{company_id}": {
+      "get": {
+        "operationId": "EstimateRequestMessageController_findByEsitmateByCompany",
+        "parameters": [
+          {
+            "name": "company_id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "tags": [
+          "Estimate Request Message"
+        ]
+      }
+    },
+    "/estimate-requests-message/customer/{customer_id}": {
+      "get": {
+        "operationId": "EstimateRequestMessageController_findByEstimateByCustomer",
+        "parameters": [
+          {
+            "name": "customer_id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "tags": [
+          "Estimate Request Message"
+        ]
+      }
+    },
     "/estimate-requests-message/{estimate_request_id}/company/{company_id}": {
       "get": {
         "operationId": "EstimateRequestMessageController_findByEstimateAndCompany",
